test with heath

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -1,80 +1,80 @@
-// #card1.front {
-//   transition: 350ms;
-//   background: url('../../image/bike1.jpg')
-//   no-repeat;
-// }
+#card1.front {
+  transition: 350ms;
+  background: url('../../image/bike1.jpg')
+  no-repeat;
+}
 
-// #card2.front {
-//   background: url('../../image/bike2.jpg')
-//   no-repeat;
-// }
+#card2.front {
+  background: url('../../image/bike2.jpg')
+  no-repeat;
+}
 
-// #card3.front {
-//   background: url('../../image/bike3.jpg')
-//   no-repeat;
-// }
+#card3.front {
+  background: url('../../image/bike3.jpg')
+  no-repeat;
+}
 
-// #card4.front {
-//   background: url('../../image/bike4.jpg')
-//   no-repeat;
-// }
+#card4.front {
+  background: url('../../image/bike4.jpg')
+  no-repeat;
+}
 
-// #card5.front {
-//   background: url('../../image/bike2.jpg')
-//   no-repeat;
-// }
+#card5.front {
+  background: url('../../image/bike2.jpg')
+  no-repeat;
+}
 
-// #card6.front {
-//   background: url('../../image/bike5.jpg')
-//   no-repeat;
-// }
+#card6.front {
+  background: url('../../image/bike5.jpg')
+  no-repeat;
+}
 
-// #card7.front {
-//   background: url('../../image/bike4.jpg')
-//   no-repeat;
-// }
+#card7.front {
+  background: url('../../image/bike4.jpg')
+  no-repeat;
+}
 
-// #card8.front {
-//   background: url('../../image/bike3.jpg')
-//   no-repeat;
-// }
+#card8.front {
+  background: url('../../image/bike3.jpg')
+  no-repeat;
+}
 
-// #card9.front {
-//   background: url('../../image/bike6.jpg')
-//   no-repeat;
-// }
+#card9.front {
+  background: url('../../image/bike6.jpg')
+  no-repeat;
+}
 
-// #card10.front {
-//   background: url('../../image/bike5.jpg')
-//   no-repeat;
-// }
+#card10.front {
+  background: url('../../image/bike5.jpg')
+  no-repeat;
+}
 
-// #card11.front {
-//   background: url('../../image/bike6.jpg')
-//   no-repeat;
-// }
+#card11.front {
+  background: url('../../image/bike6.jpg')
+  no-repeat;
+}
 
-// #card12.front {
-//   background: url('../../image/bike7.jpg')
-//   no-repeat;
-// }
+#card12.front {
+  background: url('../../image/bike7.jpg')
+  no-repeat;
+}
 
-// #card13.front {
-//   background: url('../../image/bike1.jpg')
-//   no-repeat;
-// }
+#card13.front {
+  background: url('../../image/bike1.jpg')
+  no-repeat;
+}
 
-// #card14.front {
-//   background: url('../../image/bike8.jpg')
-//   no-repeat;
-// }
+#card14.front {
+  background: url('../../image/bike8.jpg')
+  no-repeat;
+}
 
-// #card15.front {
-//   background: url('../../image/bike8.jpg')
-//   no-repeat;
-// }
+#card15.front {
+  background: url('../../image/bike8.jpg')
+  no-repeat;
+}
 
-// #card16.front {
-//   background: url('../../image/bike7.jpg')
-//   no-repeat;
-// }
+#card16.front {
+  background: url('../../image/bike7.jpg')
+  no-repeat;
+}
