--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,7 +7,7 @@
 
 #card1.front {
   transition: 350ms;
-  background: url('../image/bike4.jpg')
+  background: url('../image/bike1.jpg')
   no-repeat;
 }
 
@@ -22,7 +22,7 @@
 }
 
 #card4.front {
-  background: url('../image/bike4.jpg')
+  background: url('../image/fourbike.jpg')
   no-repeat;
 }
 
@@ -32,12 +32,12 @@
 }
 
 #card6.front {
-  background: url('../image/bike2.jpg')
+  background: url('../image/fivebike.jpg')
   no-repeat;
 }
 
 #card7.front {
-  background: url('../image/bike3.jpg')
+  background: url('../image/fourbike.jpg')
   no-repeat;
 }
 
@@ -47,41 +47,41 @@
 }
 
 #card9.front {
-  background: url('../image/bike4.jpg')
+  background: url('../image/sixbike.jpg')
   no-repeat;
 }
 
 #card10.front {
-  background: url('../image/bike2.jpg')
+  background: url('../image/fivebike.jpg')
   no-repeat;
 }
 
 #card11.front {
-  background: url('../image/bike3.jpg')
+  background: url('../image/sixbike.jpg')
   no-repeat;
 }
 
 #card12.front {
-  background: url('../image/bike4.jpg')
+  background: url('../image/seven.jpg')
   no-repeat;
 }
 
 #card13.front {
-  background: url('../image/bike4.jpg')
+  background: url('../image/bike1.jpg')
   no-repeat;
 }
 
 #card14.front {
-  background: url('../image/bike2.jpg')
+  background: url('../image/eight.jpg')
   no-repeat;
 }
 
 #card15.front {
-  background: url('../image/bike3.jpg')
+  background: url('../image/eight.jpg')
   no-repeat;
 }
 
 #card16.front {
-  background: url('../image/bike4.jpg')
+  background: url('../image/seven.jpg')
   no-repeat;
 }
