--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -22,7 +22,7 @@
 }
 
 #card4.front {
-  background: url('../image/fourbike.jpg')
+  background: url('../image/bike4.jpg')
   no-repeat;
 }
 
@@ -32,12 +32,12 @@
 }
 
 #card6.front {
-  background: url('../image/fivebike.jpg')
+  background: url('../image/bike5.jpg')
   no-repeat;
 }
 
 #card7.front {
-  background: url('../image/fourbike.jpg')
+  background: url('../image/bike4.jpg')
   no-repeat;
 }
 
@@ -47,22 +47,22 @@
 }
 
 #card9.front {
-  background: url('../image/sixbike.jpg')
+  background: url('../image/bike6.jpg')
   no-repeat;
 }
 
 #card10.front {
-  background: url('../image/fivebike.jpg')
+  background: url('../image/bike5.jpg')
   no-repeat;
 }
 
 #card11.front {
-  background: url('../image/sixbike.jpg')
+  background: url('../image/bike6.jpg')
   no-repeat;
 }
 
 #card12.front {
-  background: url('../image/seven.jpg')
+  background: url('../image/bike7.jpg')
   no-repeat;
 }
 
@@ -72,16 +72,16 @@
 }
 
 #card14.front {
-  background: url('../image/eight.jpg')
+  background: url('../image/bike8.jpg')
   no-repeat;
 }
 
 #card15.front {
-  background: url('../image/eight.jpg')
+  background: url('../image/bike8.jpg')
   no-repeat;
 }
 
 #card16.front {
-  background: url('../image/seven.jpg')
+  background: url('../image/bike7.jpg')
   no-repeat;
 }
